data-xfer/main/default/objects/Data_Transfer_Job__c/Data_Transfer_Job__c.object-meta.xml
<CustomObject>
    <label>Data Transfer Job</label>
    <nameField>
        <label>Data Transfer Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Transfer Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>