data-xfer/main/default/objects/Data_Transfer_Job__c/fields/Data_Flow_Definition__c.field-meta.xml
<CustomField>
    <fullName>Data_Flow_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Data Flow Definition</label>
    <referenceTo>Data_Flow_Definition__c</referenceTo>
    <relationshipName>Data_Transfer_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>