data-xfer/main/default/objects/Data_Transfer_Job__c/fields/Operation_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Operation_Timestamp__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Operation Timestamp</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>