data-xfer/main/default/objects/Data_Transfer_Job__c/fields/Records_Created__c.field-meta.xml
<CustomField>
    <fullName>Records_Created__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Records Created</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>