data-xfer/main/default/objects/Data_Transfer_Job__c/fields/Records_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Records_Deleted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Records Deleted</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>