data-xfer/main/default/objects/Data_Transfer_Job__c/fields/Type_del__c.field-meta.xml
<CustomField>
    <fullName>Type_del__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>import</fullName>
            </value>
            <value>
                <fullName>export</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>